[package]
name = "blueprint"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
async-trait = "0.1"
futures = "0.3"
dirs = "6"
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
